<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Data_UHR" Id="{facf00b2-7dd4-4dbf-ac1b-74b78a2f08df}">
    <Declaration><![CDATA[TYPE ST_Data_UHR :
STRUCT
	userID				:STRING;
	accessLevel			:STRING;
	transactionType		:STRING;
	transactionDate		:STRING;
	transactedBy		:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>